test/elaboration/bad/typeclass_instance_missing_member2.mle
class H 'a { x : 'a; y : 'a }
instance H int { y = 42; y = 23 }